fix billboardp position on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -3532,12 +3532,3 @@ html.large-fontsize, .fontsize-previews .large-fontsize {
         margin-right: 8px;
     }
 }
-
-.page-enter-active,
-.page-leave-active {
-  transition: opacity 0.5s;
-}
-.page-enter,
-.page-leave-to {
-  opacity: 0;
-}
